--- a/template1.html
+++ b/template1.html
@@ -1,4 +1,4 @@
-html = """<html>
+<html>
 <head>
     <title>Title</title>
 </head>
@@ -6,6 +6,4 @@ html = """<html>
     <h1>This is my first page.</h1>
     <p>Welcome to my blog.</p>
 </body>
-</html>"""
-
-print(html)
+</html>
