--- a/template2.html
+++ b/template2.html
@@ -1,11 +1,9 @@
-html = """<html>
+<html>
 <head>
     <title>Title</title>
 </head>
 <body>
-    <h1>This is my first page.</h1>
+    <h1>This is my first page.
     <p>Welcome to my blog.</p>
 </body>
-</html>"""
-
-print(html)
+</html>
